2007-12-03  Richard Hult  <richard@imendio.com>

	* src/Yelper.cpp: Patch from Matthias Clasen to fix bug #499050,
	building against xulrunner 1.9.

2007-10-22  Richard Hult  <richard@imendio.com>

	* configure.in.
	* libdevhelp-1.0.pc.in (Requires): Remove libgnomeui and
	gnome-vfs, as they are no longer used. Also make libwnk optional.
	Fixes bug #484896.

2007-10-08  Richard Hult  <richard@imendio.com>

	* configure.in: Move lanuage list to po/LINGUAS, fixes bug
	#464108 (Gilles Dartiguelongue).

2007-10-06  Richard Hult  <richard@imendio.com>

	* acinclude.m4:
	* configure.in:
	* src/dh-base.c:
	* src/dh-main.c: Make libwnck optional.

	* misc/gedit-plugin/Makefile.am: Use a non-gnumake specific rule.

2007-10-06  Richard Hult  <richard@imendio.com>

	Release 0.16.1.

2007-10-06  Richard Hult  <richard@imendio.com>

	* configure.in: Bump version.

2007-09-10  Richard Hult  <richard@imendio.com>

	* Release 0.16.

	* configure.in: Bump version.

2007-09-05  Jonh Wendell  <jwendell@gnome.org>

	* misc/gedit-plugin/devhelp.gedit-plugin.desktop.in: Updated
	plugin description to the new shortcut key.

2007-09-05  Jonh Wendell  <jwendell@gnome.org>

	* misc/gedit-plugin/devhelp/devhelp.py: Changed keybinding from F7
	to F2, avoiding a conflict with gtk 2.12

2007-08-23  Sunil Mohan Adapa  <sunil@atc.tcs.com>

	* configure.in: Added Telugu (te) to ALL_LINGUAS.

2007-06-18  Richard Hult  <richard@imendio.com>

	* configure.in: Release 0.15.

2007-05-28  Richard Hult  <richard@imendio.com>

	* src/Yelper.cpp: Fix build on Solaris, bug #439054.

2007-05-28  Richard Hult  <richard@imendio.com>

	* configure.in: Bump version.

	* data/devhelp.desktop.in.in: Don't hardcode the png extension,
	fixes bug #440434, patch from Loïc Minier.

2007-05-15  Richard Hult  <richard@imendio.com>

	* Release 0.14.

2007-05-09  Subhransu Behera <arya_subhransu@yahoo.co.in>

	* configure.in: Added Oriya (or) to ALL_LINGUAS.

2007-04-20  Richard Hult  <richard@imendio.com>
